--- a/src/src/components/navbar/NavbarStyle.css
+++ b/src/src/components/navbar/NavbarStyle.css
@@ -1,7 +1,65 @@
-.navbar{
-    width: 100%;
-    height: 3%;
+.navbar {
+    width: 92%;
+    height: 3rem;
+    padding: 0 2rem;
 
-    background-color: aqua;
-    
+    background: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(5px);
+
+    position: fixed;
+    top: 7px;
+    border-radius: 5px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.logo {
+    margin: 0;
+    color: #333338;
+
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+    transition: all 0.2s;
+}
+
+.logo:hover {
+    padding-left: 0.3rem;
+    cursor: pointer;
+}
+
+.navElements {}
+
+.navItems {
+    font-size: 20px;
+    width: auto;
+    display: flex;
+}
+
+.navItem {
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    margin-right: 1rem;
+    color: #333338;
+    padding: 0.2rem 0.4rem;
+    border-radius: 5px;
+
+    transition: all 0.2s;
+}
+
+.navItem:hover {
+    background-color: #333338;
+    color: rgba(255, 255, 255, 0.9);
+
+    cursor: pointer; 
+}
+
+@media only screen and (max-width: 970px) {
+    .navbar {
+        width: 100%;
+    }
 }
