--- a/src/src/components/navbar/NavbarStyle.css
+++ b/src/src/components/navbar/NavbarStyle.css
@@ -4,7 +4,7 @@
     padding: 0 2rem;
 
     background: rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur();
 
     position: fixed;
     top: 7px;
